kubestarter/Ingress/ingress.yml
# sudo -E port-forward service/ingress-nginx-controller -n ingress-nginx 8080:80 --address=0.0.0.0

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-notes-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-app-service
            port:
              number: 8000
